--- a/package.json
+++ b/package.json
@@ -1,3 +1,12 @@
-"scripts": {
-  "build": "webpack --mode production"
-}
+{
+  "homepage": "https://portfolio-school-stuff-semestre-2-733b3be122a3cda6d3ac405c27cc8.univ-nantes.io",
+  "name": "portfolio",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  }
