--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
-  "type": "module"
+  "type": "module",
+  {
+  "scripts": {
+    "build": "cp Index.html public/ && cp styles.css public/"
+  }
+}
 }
